test/langtools/tools/javac/valhalla/primitive-classes/CheckBadSelector.out
CheckBadSelector.java:13:21: compiler.err.expected2: class, default
1 error